--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -255,6 +255,17 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginBottom="4dp"/>
 
+                <!-- Swipe Handle (only this area captures swipe) -->
+                <View
+                    android:id="@+id/swipeHandle"
+                    android:layout_width="0dp"
+                    android:layout_height="70dp"
+                    android:background="@android:color/transparent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <!-- ========================= -->
@@ -377,6 +388,10 @@
                     app:layout_constraintTop_toBottomOf="@id/calendarCardHome"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
+
+                <include
+                    android:id="@+id/includeOpenBook"
+                    layout="@layout/overlay_open_book" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
