--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,6 +60,19 @@
         <item name="android:background">@drawable/bg_week_dot_mh</item>
     </style>
 
+    <!-- ✅ NEW: Week date number style for swipeable week row -->
+    <style name="WeekDateMH">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">32dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#1E1E1E</item>
+        <item name="android:fontFamily">serif</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+    </style>
+
     <style name="WeekDotSelected">
         <item name="android:layout_width">18dp</item>
         <item name="android:layout_height">18dp</item>
